# hvconfiguration

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.py  settings.yml
examples/: CMakeLists.txt
examples/1-simple-param/: CMakeLists.txt  main.cpp
examples/2-cci/: CMakeLists.txt  main.cpp
examples/3-config-yaml/: CMakeLists.txt  config.yaml  main.cpp
examples/4-callbacks/: CMakeLists.txt  main.cpp
scripts/: ci-before.py
src/: CMakeLists.txt  HVConfiguration  configuration.h
src/broker/: broker.cpp  broker.h
src/broker/base/: broker-base.cpp  broker-base.h
src/broker/cci/: broker-cci-callbacks.h  broker-cci-if-helper.h  broker-cci-if-helper.hpp  broker-cci.cpp  broker-cci.h
src/configuration/: common-cci.cpp  common-cci.h  common-cplusplus.h  common.cpp  common.h  configuration.cpp  configuration.h
src/loader/: loader.cpp  loader.h
src/param/: param-callback-if.h  param-if.h  param.h  param.hpp
src/param/base/: param-base.h  param-base.hpp
src/param/callback/: param-callback.cpp  param-callback.h  param-callback.hpp
src/param/cci/: param-cci-callbacks.h  param-cci.h  param-cci.hpp
src/storage/: storage-if.h  storage.h
src/storage/environment/: environment.cpp  environment.h
src/storage/memory/: memory.cpp  memory.h
src/storage/yaml/: yaml.cpp  yaml.h
tests/: CMakeLists.txt  ParamTest.cpp
tests/conan/: CMakeLists.txt  conanfile.py  example.cpp
