# Example

get_filename_component(EXAMPLE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
string(REPLACE " " "_" EXAMPLE_NAME ${EXAMPLE_NAME})

project(${EXAMPLE_NAME})

file(GLOB ${EXAMPLE_NAME}_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

add_executable(${EXAMPLE_NAME} ${${EXAMPLE_NAME}_FILES})

set(${EXAMPLE_NAME}-LIBRARIES ${PROJECT_NAME_LOWER}
		SystemC::systemc
		cciapi)

target_link_libraries(${EXAMPLE_NAME} ${${EXAMPLE_NAME}-LIBRARIES})

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.yaml ${CMAKE_CURRENT_BINARY_DIR}/config.yaml COPYONLY)

